[package]
name = "process_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["mtls"] }
rocket_http = { version = "0.5.0-rc.2"}
tokio = { version = "*", features = ["process"]  }
shell-words = "1.1.0"
winsplit = "0.1.0"
